src/objects/CH_CaseTeamHistory__c.object
<CustomObject>
    <fields>
        <fullName>CH_CaseTeamElapsedTime__c</fullName>
        <formula>(CH_CaseTeamExit__c-CH_CaseTeamEntry__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseTeamElapsedTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_CaseTeamEntry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseTeamEntry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_CaseTeamExit__c</fullName>
        <description>date field representing the date and time the person is leaves the case team, if the person did not leave the case team at the moment the case is closed the case closure time is filled in.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseTeamExit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_CaseTeamNokiaID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseTeamNokiaID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CaseTeamOwner__c</fullName>
        <description>copies the NokiaID of the current owner.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseTeamOwner:</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CaseTeamRole__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseTeamRole</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CaseTeamWorkgroup__c</fullName>
        <description>copies the current workgroup name at the moment the person is added to the case team</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseTeamWorkgroup</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Team History</relationshipLabel>
        <relationshipName>Case_Team_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Team History</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>CaseTeam History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Team History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>